assets/dananke/css/hugo-internal-templates.css
/* pagination.html: https://github.com/spf13/hugo/blob/master/tpl/tplimpl/template_embedded.go#L117 */
.pagination {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    margin-bottom: 1rem;
    margin-left: 0;
    margin-right: 0;
    margin-top: 3rem;
    padding-left: 2rem;
    padding-right: 2rem;
    width: 100%;
}

.pagination li {
  display: inline-block;
  margin-right: .8rem;
  font-size: 1.1rem;
  height: 2rem;
  min-height: 48px;
  min-width: 48px;
  width: 2rem;
}

.pagination li:last-of-type {
    margin-right: 0;
}

.pagination li a {
  display: block;
  padding: .8rem 1rem;
  border-radius: 3px;
  text-decoration: none;
}

.pagination li.disabled {
    background-color: var(--main-nav-bg-colour, #00449e);
    color: rgba(255, 255, 255, .9);
    opacity: .6;
    text-decoration: line-through;
}

#TableOfContents ul li {
  margin-bottom: 1em;
}

.pagination .page-item .page-link {
    background-color: var(--main-nav-bg-colour, #00449e);
    color: rgba(255, 255, 255, .8);
    border: 1px solid var(--main-nav-bg-colour, #00449e);
}

.pagination .page-item.disabled .page-link {
    background-color: var(--main-nav-bg-colour, #00449e);
    color: rgba(255, 255, 255, .9);
    opacity: .6;
    text-decoration: line-through;
}

.pagination .page-item.active .page-link, .pagination .page-item.active .page-link {
    background-color: rgba(255, 255, 255, .8);
    color: var(--main-nav-bg-colour, #00449e);
}

.page-item .page-link:link, .page-item .page-link:visited {
    background-color: var(--main-nav-bg-colour, #00449e);
}

.page-item .page-link:active, .page-item .page-link:focus, .page-item .page-link:hover,
.page-item.active .page-link:active, .page-item.active .page-link:focus, .page-item.active .page-link:hover {
    background-color: #fff;
    color: var(--main-nav-bg-colour, #00449e);
    text-decoration: underline;
}

